Mirror Modifier not showing "Shadow" mesh in wireframe view #33217

Closed
opened 2012-11-18 00:00:51 +01:00 by Pablo Vazquez · 9 comments
Member

%%%Hi,

The Mirror modifier, when in wireframe view, shows the "shadow" mesh on the mirrored side, but only after you enter/exit object mode at least once.

Attached a .blend to follow the simple steps below, and an image showing the same 3 step process.

  1. Open the attached .blend. It has a mesh object from which I deleted all the vertices, and it is in edit mode. Wireframe view.
  2. Add something to it while in Edit mode, for example: Shift+A > Cube
  3. The mirrored side doesn't show anything. Until you enter and exit Object mode, then it will show a "shadow" of the mirrored mesh.

Current SVN (r52310)
Ubuntu 12.10, NVIDIA 460 GTX (with propietary drivers up-to-date)

Cheers!%%%

%%%Hi, The Mirror modifier, when in wireframe view, shows the "shadow" mesh on the mirrored side, but only after you enter/exit object mode at least once. Attached a .blend to follow the simple steps below, and an image showing the same 3 step process. 1. Open the attached .blend. It has a mesh object from which I deleted all the vertices, and it is in edit mode. Wireframe view. 2. Add something to it while in Edit mode, for example: Shift+A > Cube 3. The mirrored side doesn't show anything. Until you enter and exit Object mode, then it will show a "shadow" of the mirrored mesh. Current SVN (r52310) Ubuntu 12.10, NVIDIA 460 GTX (with propietary drivers up-to-date) Cheers!%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%I am trying to reproduce the bug, but the shadow does show up fine. Could you try again with another scene?%%%

%%%I am trying to reproduce the bug, but the shadow does show up fine. Could you try again with another scene?%%%
Author
Member

%%%Just noticed it doesn't happen on 2.63. But it does happen on 2.64a, and current SVN.

Attached a video showing the error. The shadow mesh doesn't appear until going in/out edit mode.

Using latest SVN (as shown in splash)%%%

%%%Just noticed it doesn't happen on 2.63. But it does happen on 2.64a, and current SVN. Attached a video showing the error. The shadow mesh doesn't appear until going in/out edit mode. Using latest SVN (as shown in splash)%%%

%%%Yes, now I see the problem. Even the array modifier gives the same problem. Seems to be an issue with the 3D view drawing/update, rather than the modifier itself.%%%

%%%Yes, now I see the problem. Even the array modifier gives the same problem. Seems to be an issue with the 3D view drawing/update, rather than the modifier itself.%%%

%%%It seems that the only primitive for which the shadow does get displayed immediately in the wireframe mode, is the plane. All others (cube, cone, icosphere, individual vertices) have this issue.%%%

%%%It seems that the only primitive for which the shadow does get displayed immediately in the wireframe mode, is the plane. All others (cube, cone, icosphere, individual vertices) have this issue.%%%

%%%Assigning to Antony, he's currently looking into familiar issue.

Antony, feel free to unassign it from you if its not causes by the same issue :)%%%

%%%Assigning to Antony, he's currently looking into familiar issue. Antony, feel free to unassign it from you if its not causes by the same issue :)%%%

%%%The issue is that newly created edges are not set to draw. I see that only a few places in the code need to explicitly disable edge drawing while many places in the code need to have edge drawing on. Since enforcing this for every modifier will potentially spoil edge drawing of previous modifiers, I think starting with the flag on and disabling for subsequent modifiers is a better solution.
I committed a fix for the mirror modifier but I am not closing yet because I think that the other solution will better address the issue. Faulty case, currently subsurf with optimal drawing + mirror after subsurf will draw all edges, spoiling subsurf modifier's output. %%%

%%%The issue is that newly created edges are not set to draw. I see that only a few places in the code need to explicitly disable edge drawing while many places in the code need to have edge drawing on. Since enforcing this for every modifier will potentially spoil edge drawing of previous modifiers, I think starting with the flag on and disabling for subsequent modifiers is a better solution. I committed a fix for the mirror modifier but I am not closing yet because I think that the other solution will better address the issue. Faulty case, currently subsurf with optimal drawing + mirror after subsurf will draw all edges, spoiling subsurf modifier's output. %%%

%%%made edges default to using the draw flag r52436. closing.%%%

%%%made edges default to using the draw flag r52436. closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33217
No description provided.