enable edge draw by default for new edges, alternate fix for [#33217] Mirror Modifier not showing "Shadow" mesh in wireframe view